adds images and content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Carson Sartain</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,13 +16,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Under Construction</h1>
+				<h1>Carson Sartain</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
+						<li><a href="#intro">Home</a></li>
+						<li><a href="#one">Who I Am</a></li>
+						<li><a href="#two">What I Do</a></li>
+						<li><a href="#work">Clients</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -31,11 +31,10 @@
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
-					<header>
-						<h2>Hey.</h2>
+					<header class="intro">
+						<h2>Carson Sartain</h2>
+						<p>Creative Storytelling Meets Strategic Communications</p>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -43,27 +42,24 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<section id="one" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I’m curious, I’m thoughtful and, for as long as I can remember, I’ve been a storyteller. I’m obsessively interested in understanding the world around me, but not just how I see it. I want to know what makes us tick, how the same events and experiences land across the spectrum and what--despite the multitude of differences between us--really binds us together. Time and time again, I’ve found that common ground in storytelling. It’s where we’re able to build compassion, where we become inspired to take action and where we set the gears in motion for creating positive impact. And I’m someone who’s into making all of this happen.
+					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
+			<section id="two" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Each facet of my professional career has been rooted in bringing untold stories to life, especially those that cultivate genuine connection--whether to the ceaseless work of environmental nonprofits, to the critical conversations that global media organizations are giving rise to, or to the purpose-driven tech companies leveraging their platforms to tackle our most critical social issues. These stories matter and I’m here to help get them out into the world. By crafting compelling narratives, by building relationships and collaborating with journalists and by sprinkling in a fair amount of strategic thinking, that’s precisely what I do.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -72,34 +68,26 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Who I've Worked With</h2>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<img src="images/carson-assets/logos/nat-geo-2.png" width="500px" height="200px" title="National Geographic" alt="National Geographic" />
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<img src="images/carson-assets/logos/TNC.png" width="500px" height="200px" title="The Nature Conservancy" alt="The Nature Conservancy" />
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<img src="images/carson-assets/logos/RYOT.png" width="500px" height="200px" title="RYOT" alt="RYOT" />
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<img src="images/carson-assets/logos/Avid.png" width="500px" height="200px" title="Avid" alt="Avid" />
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<img src="images/carson-assets/logos/strangeworks.jpeg" width="500px" height="200px" title="Strangeworks" alt="strangeworks" />
 							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
-
 				</div>
 			</section>
 
@@ -108,19 +96,11 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
+						<p><a href="mailto:carsonsartain@gmail.com" >carsonsartain@gmail.com</a></p>
+						<p><a href="https://twitter.com/CarsonSartain" target="_blank">@carsonsartain</a></p>
+						<p><a href="http://www.linkedin.com/in/carsonsartain/" target="_blank">LinkedIn</a></p>
 					</div>
 				</div>
 			</section>
@@ -130,17 +110,13 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/CarsonSartain" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="www.linkedin.com/in/carsonsartain/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Carson Sartain</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
