adds styling and logos

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
-				<div class="content">
+				<div class="content work">
 					<header>
 						<h2>Who I've Worked With</h2>
 					</header>
@@ -74,33 +74,37 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<img src="images/carson-assets/logos/nat-geo-2.png" width="500px" height="200px" title="National Geographic" alt="National Geographic" />
+									<img src="images/carson-assets/logos/nat-geo-2.png" title="National Geographic" alt="National Geographic" />
 							</article>
 							<article class="from-right">
-								<img src="images/carson-assets/logos/TNC.png" width="500px" height="200px" title="The Nature Conservancy" alt="The Nature Conservancy" />
+									<img src="images/carson-assets/logos/TNC.png"  title="The Nature Conservancy" alt="The Nature Conservancy" />
 							</article>
 							<article class="from-left">
-								<img src="images/carson-assets/logos/RYOT.png" width="500px" height="200px" title="RYOT" alt="RYOT" />
+									<img id="ryot" src="images/carson-assets/logos/RYOT.png" title="RYOT" alt="RYOT" />
 							</article>
 							<article class="from-right">
-								<img src="images/carson-assets/logos/Avid.png" width="500px" height="200px" title="Avid" alt="Avid" />
+									<img src="images/carson-assets/logos/Avid.png" title="Avid" alt="Avid" />
 							</article>
 							<article class="from-left">
-								<img src="images/carson-assets/logos/strangeworks.jpeg" width="500px" height="200px" title="Strangeworks" alt="strangeworks" />
+									<img id="strangeworks" src="images/carson-assets/logos/strangeworks.jpeg"  title="Strangeworks" alt="strangeworks" />
+							</article>
+							<article class="from-right">
+									<img src="images/carson-assets/logos/vrai.png"  title="Vrai" alt="Vrai" />
 							</article>
 				</div>
+				<a id="work-arrow" href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
+			<section id="contact" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
+						<h2 id="hey">Say Hey</h2>
 					</header>
-					<div class="box">
-						<p><a href="mailto:carsonsartain@gmail.com" >carsonsartain@gmail.com</a></p>
-						<p><a href="https://twitter.com/CarsonSartain" target="_blank">@carsonsartain</a></p>
-						<p><a href="http://www.linkedin.com/in/carsonsartain/" target="_blank">LinkedIn</a></p>
+					<div class="box" id="clear-box">
+						<a href="mailto:carsonsartain@gmail.com" ><img src="https://img.icons8.com/ios/50/000000/filled-message.png"/></a>
+						<a href="https://twitter.com/CarsonSartain" class="icon brands fa-twitter" target="_blank"></a>
+						<a href="http://www.linkedin.com/in/carsonsartain/" class="icon brands fa-linkedin-in"></a>
 					</div>
 				</div>
 			</section>
