--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<img id="strangeworks" src="images/carson-assets/logos/strangeworks.jpeg"  title="Strangeworks" alt="strangeworks" />
 							</article>
 							<article class="from-right">
-									<img src="images/carson-assets/logos/vrai.png"  title="Vrai" alt="Vrai" />
+								<img src="images/carson-assets/logos/vrai.png"  title="Vrai" alt="Vrai" />
 							</article>
 				</div>
 				<a id="work-arrow" href="#contact" class="button style2 down anchored">Next</a>
@@ -102,9 +102,9 @@
 						<h2 id="hey">Say Hey</h2>
 					</header>
 					<div class="box" id="clear-box">
-						<a href="mailto:carsonsartain@gmail.com" ><img src="https://img.icons8.com/ios/50/000000/filled-message.png"/></a>
-						<a href="https://twitter.com/CarsonSartain" class="icon brands fa-twitter" target="_blank"></a>
-						<a href="http://www.linkedin.com/in/carsonsartain/" class="icon brands fa-linkedin-in"></a>
+						<a href="mailto:carsonsartain@gmail.com" ><img src="images/carson-assets/logos/email-12-48.png"/></a>
+						<a href="https://twitter.com/CarsonSartain" target="_blank"><img src="images/carson-assets/logos/twitter-48.png" alt="Twitter logo"></a>
+						<a id="linkedin" href="http://www.linkedin.com/in/carsonsartain/" target="_blank"><img src="images/carson-assets/logos/linkedin-48.png" alt="LinkedIn logo"></a>
 					</div>
 				</div>
 			</section>
