--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-									<img src="images/carson-assets/logos/nat-geo-2.png" title="National Geographic" alt="National Geographic" />
+									<a href="https://www.nationalgeographic.com/"><img src="images/carson-assets/logos/nat-geo-2.png" title="National Geographic" alt="National Geographic" /></a>
 							</article>
 							<article class="from-right">
 									<img src="images/carson-assets/logos/TNC.png"  title="The Nature Conservancy" alt="The Nature Conservancy" />
