--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I’m curious, I’m thoughtful and, for as long as I can remember, I’ve been a storyteller. I’m obsessively interested in understanding the world around me, but not just how I see it. I want to know what makes us tick, how the same events and experiences land across the spectrum and what--despite the multitude of differences between us--really binds us together. Time and time again, I’ve found that common ground in storytelling. It’s where we’re able to build compassion, where we become inspired to take action and where we set the gears in motion for creating positive impact. And I’m someone who’s into making all of this happen.
+					<p>I’m curious, I’m thoughtful and, for as long as I can remember, I’ve been a storyteller. I’m obsessively interested in understanding the world around me, but not just how I see it. I want to know what makes us tick, how the same events and experiences land across the spectrum and what&#8212;despite the multitude of differences between us&#8212;really binds us together. Time and time again, I’ve found that common ground in storytelling. It’s where we’re able to build compassion, where we become inspired to take action and where we set the gears in motion for creating positive impact. And I’m someone who’s into making all of that happen.
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
@@ -59,7 +59,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Each facet of my professional career has been rooted in bringing untold stories to life, especially those that cultivate genuine connection--whether to the ceaseless work of environmental nonprofits, to the critical conversations that global media organizations are giving rise to, or to the purpose-driven tech companies leveraging their platforms to tackle our most critical social issues. These stories matter and I’m here to help get them out into the world. By crafting compelling narratives, by building relationships and collaborating with journalists and by sprinkling in a fair amount of strategic thinking, that’s precisely what I do.</p>
+					<p>Each facet of my career has been rooted in bringing untold stories to life, especially those that cultivate genuine connection&#8212;whether to the ceaseless work of environmental nonprofits, to the critical conversations global media organizations are giving rise to or to purpose-driven tech companies leveraging their platforms to tackle critical social issues. These stories matter and I’m here to help get them out into the world. By crafting compelling narratives, collaborating with journalists and thinking strategically, that’s just what I do.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
