updates "what I do" section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Each facet of my career has been rooted in bringing untold stories to life, especially those that cultivate genuine connection&#8212;whether to the ceaseless work of environmental nonprofits, to the critical conversations global media organizations are giving rise to or to purpose-driven tech companies leveraging their platforms to tackle critical social issues. These stories matter and I’m here to help get them out into the world. By crafting compelling narratives, collaborating with journalists and thinking strategically, that’s just what I do.</p>
+					<p>Each facet of my career has been rooted in bringing untold stories to life, especially those that cultivate genuine connection&#8212;whether to the ceaseless work of environmental nonprofits, to the critical conversations global media organizations are giving rise to, or to purpose-driven tech companies leveraging their platforms to tackle critical social issues. These stories matter and I’m here to help get them out into the world. By crafting compelling narratives, collaborating with journalists and creatives, and thinking strategically, that’s just what I do.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
