--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>I’m curious, I’m thoughtful and, for as long as I can remember, I’ve been a storyteller. I’m obsessively interested in understanding the world around me, but not just how I see it. I want to know what makes us tick, how the same events and experiences land across the spectrum and what&#8212;despite the multitude of differences between us&#8212;really binds us together. Time and time again, I’ve found that common ground in storytelling. It’s where we’re able to build compassion, where we become inspired to take action and where we set the gears in motion for creating positive impact. And I’m someone who’s into making all of that happen.
+					<p>I’m curious, I’m thoughtful and, for as long as I can remember, I’ve been a storyteller. I’m obsessively interested in understanding the world around me, but not just how I see it. I want to know what makes us tick, how the same events and experiences land across the spectrum and what&#8212;despite the multitude of differences between us&#8212;really binds us together. Time and time again, I’ve found that common ground in storytelling. It’s where we’re able to build compassion, where we become inspired to take action, and where we set the gears in motion for creating positive impact. And I’m someone who’s into making all of that happen.
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
