adds new sgcc logos and sxsw logo

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 									<img src="images/carson-assets/logos/nat-geo-2.png" title="National Geographic" alt="National Geographic" />
 							</article>
 							<article class="from-right">
-									<img src="images/carson-assets/logos/TNC.png"  title="The Nature Conservancy" alt="The Nature Conservancy" />
+								<img id="sxsw" src="images/carson-assets/logos/sxsw.png"  title="South By Southwest" alt="South By Southwest" />
 							</article>
 							<article class="from-left">
-									<img id="ryot" src="images/carson-assets/logos/RYOT.png" title="RYOT" alt="RYOT" />
+									<img src="images/carson-assets/logos/TNC.png"  title="The Nature Conservancy" alt="The Nature Conservancy" />
 							</article>
 							<article class="from-right">
 									<img src="images/carson-assets/logos/Avid.png" title="Avid" alt="Avid" />
@@ -89,7 +89,13 @@
 									<img id="strangeworks" src="images/carson-assets/logos/strangeworks.jpeg"  title="Strangeworks" alt="strangeworks" />
 							</article>
 							<article class="from-right">
-								<img src="images/carson-assets/logos/vrai.png"  title="Vrai" alt="Vrai" />
+								<img id="sgcc" src="images/carson-assets/logos/sgcc2.png"  title="Shellfish Growers Climate Coalition" alt="Shellfish Growers Climate Coalition" />
+							</article>
+							<article class="from-left">
+									<img id="ryot" src="images/carson-assets/logos/RYOT.png" title="RYOT" alt="RYOT" />
+							</article>
+							<article class="from-right">
+								<img id="vrai" src="images/carson-assets/logos/vrai.png"  title="Vrai" alt="Vrai" />
 							</article>
 				</div>
 				<a id="work-arrow" href="#contact" class="button style2 down anchored">Next</a>
